Revert "Cleanup: use stream.toList()."
This reverts commit 8c8a7d9496f77b1d8616fa918b434b1a4e7f7796.